# cinemabe/Cinema/2-Business/Cinema.Business.DTO/Catalog/RoomDTOs.cs
@@ -8,6 +8,7 @@ public class RoomDTO
     public Guid Id { get; set; }
     public string Name { get; set; } = string.Empty;
     public Guid TheaterId { get; set; }
+    public Guid RoomTypeId { get; set; }
     public int TotalRows { get; set; }
     public int TotalColumns { get; set; }
     public RoomStatus Status { get; set; }
@@ -17,6 +18,7 @@ public class CreateRoomRequest
 {
     public string Name { get; set; } = string.Empty;
     public Guid TheaterId { get; set; }
+    public Guid RoomTypeId { get; set; }
     public int TotalRows { get; set; }
     public int TotalColumns { get; set; }
     public RoomStatus Status { get; set; } = RoomStatus.Active;
@@ -27,6 +29,7 @@ public class UpdateRoomRequest : IHasId
     public Guid Id { get; set; }
     public string Name { get; set; } = string.Empty;
     public Guid TheaterId { get; set; }
+    public Guid RoomTypeId { get; set; }
     public int TotalRows { get; set; }
     public int TotalColumns { get; set; }
     public RoomStatus Status { get; set; } = RoomStatus.Active;
