# cinemabe/Cinema/2-Business/Cinema.Business.DTO/Catalog/TicketPriceDTOs.cs
@@ -6,6 +6,7 @@ public class TicketPriceDTO
 {
     public Guid Id { get; set; }
     public Guid TheaterId { get; set; }
+    public Guid RoomTypeId { get; set; }
     public Guid SeatTypeId { get; set; }
     public Guid TimeSlotId { get; set; }
     public bool IsHoliday { get; set; }
@@ -15,6 +16,7 @@ public class TicketPriceDTO
 public class CreateTicketPriceRequest
 {
     public Guid TheaterId { get; set; }
+    public Guid RoomTypeId { get; set; }
     public Guid SeatTypeId { get; set; }
     public Guid TimeSlotId { get; set; }
     public bool IsHoliday { get; set; }
@@ -25,6 +27,7 @@ public class UpdateTicketPriceRequest : IHasId
 {
     public Guid Id { get; set; }
     public Guid TheaterId { get; set; }
+    public Guid RoomTypeId { get; set; }
     public Guid SeatTypeId { get; set; }
     public Guid TimeSlotId { get; set; }
     public bool IsHoliday { get; set; }
