# cinemabe/Cinema/3-Data/Cinema.Data.Entities/Entities/Room.cs
@@ -4,10 +4,12 @@ public class Room : BaseEntity
 {
     public string Name { get; set; } = string.Empty;
     public Guid TheaterId { get; set; }
+    public Guid RoomTypeId { get; set; }
     public int TotalRows { get; set; }
     public int TotalColumns { get; set; }
     public RoomStatus Status { get; set; } = RoomStatus.Active;
     public Theater Theater { get; set; } = null!;
+    public RoomType RoomType { get; set; } = null!;
     public ICollection<Seat> Seats { get; set; } = new List<Seat>();
     public ICollection<ShowTimeRoom> ShowTimeRooms { get; set; } = new List<ShowTimeRoom>();
 }
